Show missing schemas in OpenAPI when using OneOf
