# streaming/gen/http/openapi3.yaml
@@ -20,24 +20,24 @@ paths:
                         application/json:
                             schema:
                                 type: string
-                                example: Excepturi ullam repellendus eius quis quos inventore.
-                            example: Rerum maiores et aut.
+                                example: Reprehenderit molestiae qui dicta sit modi consequatur.
+                            example: Doloremque quo neque rerum.
                 "401":
                     description: 'unauthorized: Unauthorized response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Amet facere nihil molestias.
-                            example: Sit inventore est recusandae accusantium.
+                                example: Quas aliquam.
+                            example: Reprehenderit autem necessitatibus esse unde adipisci.
                 "403":
                     description: 'invalid-scopes: Forbidden response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Perspiciatis tenetur aut natus occaecati suscipit sapiente.
-                            example: Et exercitationem nulla qui dicta.
+                                example: Ullam consequatur corrupti possimus aliquid aperiam.
+                            example: Quis modi.
             security:
                 - jwt_header_Authorization:
                     - stream:write
@@ -56,8 +56,8 @@ paths:
                   schema:
                     type: string
                     description: View to use to render the result
-                    example: Assumenda et voluptas dolor aperiam.
-                  example: Quo neque rerum.
+                    example: Corporis nisi praesentium eaque.
+                  example: Illum possimus voluptatem omnis consequatur amet.
             responses:
                 "101":
                     description: Switching Protocols response.
@@ -66,25 +66,25 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/ChatSummary'
                             example:
-                                length: 1377377358064110438
-                                message: Ullam quia neque quis qui quia optio.
-                                sent_at: "1971-06-24T22:05:58Z"
+                                length: 357417275009774116
+                                message: Nostrum minima voluptatum sequi.
+                                sent_at: "2014-11-21T18:11:53Z"
                 "401":
                     description: 'unauthorized: Unauthorized response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Optio in quia et nostrum.
-                            example: Reprehenderit autem necessitatibus esse unde adipisci.
+                                example: Qui veritatis ea suscipit.
+                            example: Ut reiciendis voluptatem aliquam at facilis.
                 "403":
                     description: 'invalid-scopes: Forbidden response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Eos consequatur nobis quod.
-                            example: Quis modi.
+                                example: Voluptas quia eligendi et eaque.
+                            example: Velit molestiae dolore quod illo reprehenderit.
             security:
                 - jwt_header_Authorization:
                     - stream:read
@@ -104,16 +104,16 @@ paths:
                         application/json:
                             schema:
                                 type: string
-                                example: Aliquid voluptatem vitae error eveniet dolores sapiente.
-                            example: Libero commodi vero.
+                                example: Qui dignissimos expedita eos veniam illum.
+                            example: Itaque tempore earum quae fugiat enim.
                 "403":
                     description: 'invalid-scopes: Forbidden response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Amet voluptatem.
-                            example: Ducimus velit ipsam sequi beatae provident dolorum.
+                                example: In molestiae labore ut.
+                            example: Et architecto est numquam commodi rerum est.
             security:
                 - jwt_header_Authorization:
                     - stream:write
@@ -132,16 +132,16 @@ paths:
                             schema:
                                 type: string
                                 description: New JWT token
-                                example: Vero necessitatibus ullam sed maiores nobis.
-                            example: Voluptatem reprehenderit amet sit ex corrupti.
+                                example: Eos eos velit dolorum consequuntur culpa adipisci.
+                            example: Molestiae iure assumenda.
                 "401":
                     description: 'unauthorized: Unauthorized response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Sint sapiente vitae quis perferendis.
-                            example: Laborum dolorum officiis dignissimos hic est culpa.
+                                example: Impedit sunt modi aut accusamus atque blanditiis.
+                            example: Voluptas dolor.
             security:
                 - basic_header_Authorization: []
     /subscribe:
@@ -160,24 +160,27 @@ paths:
                                 $ref: '#/components/schemas/Event'
                             example:
                                 action: added
-                                added_at: "2000-04-23T17:24:02Z"
-                                message: Vel quidem error explicabo.
+                                added_at: "1972-05-14T15:38:57Z"
+                                details:
+                                    Type: package_created
+                                    Value: '{"id":4134264707864151039,"item":{"description":"Natus rerum eos at et rerum non."}}'
+                                message: Et soluta deserunt sed et eum voluptatem.
                 "401":
                     description: 'unauthorized: Unauthorized response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Quo omnis quasi nihil quasi cumque.
-                            example: Suscipit adipisci voluptas quia eligendi et.
+                                example: Qui hic perspiciatis modi quasi ipsa cupiditate.
+                            example: Velit voluptates enim quo vel modi.
                 "403":
                     description: 'invalid-scopes: Forbidden response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Esse non.
-                            example: Quo molestiae.
+                                example: Reprehenderit et saepe aut.
+                            example: Neque non eum mollitia qui est.
             security:
                 - jwt_header_Authorization:
                     - stream:write
@@ -196,28 +199,28 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/ChatSummaryResponseCollection'
                             example:
-                                - length: 1647485631995539732
-                                  message: Similique tempora nesciunt repellendus ipsum quis.
-                                  sent_at: "1997-01-14T09:46:38Z"
-                                - length: 1647485631995539732
-                                  message: Similique tempora nesciunt repellendus ipsum quis.
-                                  sent_at: "1997-01-14T09:46:38Z"
+                                - length: 1434954528860155933
+                                  message: Rerum ut excepturi quasi sit quas.
+                                  sent_at: "1999-09-28T05:07:04Z"
+                                - length: 1434954528860155933
+                                  message: Rerum ut excepturi quasi sit quas.
+                                  sent_at: "1999-09-28T05:07:04Z"
                 "401":
                     description: 'unauthorized: Unauthorized response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Expedita in velit harum excepturi est iusto.
-                            example: Voluptatibus enim aliquid sunt suscipit.
+                                example: Iste beatae quo.
+                            example: Suscipit corrupti deserunt.
                 "403":
                     description: 'invalid-scopes: Forbidden response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Fugiat consectetur commodi nihil autem.
-                            example: Ducimus sed qui veritatis.
+                                example: Labore id porro corrupti similique sequi.
+                            example: Consequuntur cumque id aliquam aliquam.
             security:
                 - jwt_header_Authorization:
                     - stream:write
@@ -229,21 +232,21 @@ components:
                 length:
                     type: integer
                     description: Length of the message sent
-                    example: 3807871536578403479
+                    example: 3209626270308960189
                     format: int64
                 message:
                     type: string
                     description: Message sent to the server
-                    example: Vero quia ad quibusdam.
+                    example: Iste voluptatem ut.
                 sent_at:
                     type: string
                     description: Time at which the message was sent
-                    example: "1997-05-03T17:42:57Z"
+                    example: "1989-08-17T05:10:24Z"
                     format: date-time
             example:
-                length: 2898030982842231240
-                message: Possimus qui hic perspiciatis modi quasi.
-                sent_at: "1996-12-15T08:33:55Z"
+                length: 1105957459656443033
+                message: Voluptatem reprehenderit amet sit ex corrupti.
+                sent_at: "2011-06-07T01:14:28Z"
             required:
                 - message
                 - sent_at
@@ -253,22 +256,22 @@ components:
                 length:
                     type: integer
                     description: Length of the message sent
-                    example: 7020248672909453972
+                    example: 1534369680737861531
                     format: int64
                 message:
                     type: string
                     description: Message sent to the server
-                    example: Eos eos velit dolorum consequuntur culpa adipisci.
+                    example: Ex quas aperiam alias quidem.
                 sent_at:
                     type: string
                     description: Time at which the message was sent
-                    example: "2001-02-17T17:00:14Z"
+                    example: "2013-08-04T06:35:05Z"
                     format: date-time
             description: ChatSummaryResponse result type (default view)
             example:
-                length: 6710387863326036119
-                message: Eos veniam illum illum in molestiae.
-                sent_at: "1978-07-13T22:23:03Z"
+                length: 6425399083107082523
+                message: Repellendus corporis.
+                sent_at: "1979-08-31T23:37:39Z"
             required:
                 - message
                 - sent_at
@@ -278,15 +281,18 @@ components:
                 $ref: '#/components/schemas/ChatSummaryResponse'
             description: SummaryResponseBody is the result type for an array of ChatSummaryResponse (default view)
             example:
-                - length: 1647485631995539732
-                  message: Similique tempora nesciunt repellendus ipsum quis.
-                  sent_at: "1997-01-14T09:46:38Z"
-                - length: 1647485631995539732
-                  message: Similique tempora nesciunt repellendus ipsum quis.
-                  sent_at: "1997-01-14T09:46:38Z"
-                - length: 1647485631995539732
-                  message: Similique tempora nesciunt repellendus ipsum quis.
-                  sent_at: "1997-01-14T09:46:38Z"
+                - length: 1434954528860155933
+                  message: Rerum ut excepturi quasi sit quas.
+                  sent_at: "1999-09-28T05:07:04Z"
+                - length: 1434954528860155933
+                  message: Rerum ut excepturi quasi sit quas.
+                  sent_at: "1999-09-28T05:07:04Z"
+                - length: 1434954528860155933
+                  message: Rerum ut excepturi quasi sit quas.
+                  sent_at: "1999-09-28T05:07:04Z"
+                - length: 1434954528860155933
+                  message: Rerum ut excepturi quasi sit quas.
+                  sent_at: "1999-09-28T05:07:04Z"
         Event:
             type: object
             properties:
@@ -298,20 +304,88 @@ components:
                 added_at:
                     type: string
                     description: Time at which the message was added
-                    example: "1985-05-15T03:10:48Z"
+                    example: "1995-03-19T13:53:01Z"
                     format: date-time
+                details:
+                    type: object
+                    properties:
+                        Type:
+                            type: string
+                            description: |-
+                                Union type name, one of:
+                                - "package_created"
+                                - "package_deleted"
+                                - "package_updated"
+                            example: package_updated
+                            enum:
+                                - package_created
+                                - package_deleted
+                                - package_updated
+                        Value:
+                            type: string
+                            description: JSON encoded union value
+                            example: '{"id":4134264707864151039,"item":{"description":"Natus rerum eos at et rerum non."}}'
+                    example:
+                        Type: package_updated
+                        Value: '{"id":4134264707864151039,"item":{"description":"Natus rerum eos at et rerum non."}}'
+                    required:
+                        - Type
+                        - Value
                 message:
                     type: string
                     description: Message sent to the server
-                    example: Maxime fugiat repellendus corporis dolorem voluptas sapiente.
+                    example: Accusamus est et ipsa ipsa et.
             example:
                 action: added
-                added_at: "1992-10-13T12:22:27Z"
-                message: Quo consequuntur labore id porro corrupti.
+                added_at: "1997-05-03T17:42:57Z"
+                details:
+                    Type: package_created
+                    Value: '{"id":4134264707864151039,"item":{"description":"Natus rerum eos at et rerum non."}}'
+                message: Vero quia ad quibusdam.
             required:
                 - message
                 - action
                 - added_at
+        Item:
+            type: object
+            properties:
+                description:
+                    type: string
+                    example: Voluptatem vitae error eveniet dolores.
+            example:
+                description: Nostrum amet voluptatem corrupti.
+        PackageCreatedEvent:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    description: Identifier of package
+                    example: 7469039031279743034
+                    format: int64
+                item:
+                    $ref: '#/components/schemas/Item'
+            example:
+                id: 5604667108238848724
+                item:
+                    description: Magnam dicta.
+            required:
+                - id
+        PackageDeletedEvent:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    description: Identifier of package
+                    example: 4493684332048420724
+                    format: int64
+                item_deleted:
+                    $ref: '#/components/schemas/Item'
+            example:
+                id: 6339936517794195207
+                item_deleted:
+                    description: Magnam dicta.
+            required:
+                - id
     securitySchemes:
         basic_header_Authorization:
             type: http
